--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,10 @@
+body{
+  background: linear-gradient(to right, #ffffff, #00d9ff);
+}
 .App {
   font-family: Arial, sans-serif;
   max-width: 400px;
   margin: 0 auto;
   padding: 1rem;
   
-}
-
-h2 {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-  display: block;
-  padding: 0.5rem 1rem;
-  background-color: #000000;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin-bottom: 1rem;
-  display: block;
-  padding: 0.5rem 1rem;
-  background-color: #f50000;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-li {
-  margin-bottom: 0.5rem;
-}
-
-input {
-  display: block;
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-button {
-  display: block;
-  padding: 0.5rem 1rem;
-  background-color: #000000;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #000000;
-}
-
-button:active {
-  background-color: #000000;
-}
-
-button:focus {
-  outline: none;
 }
