--- a/src/components/TransactionList.css
+++ b/src/components/TransactionList.css
@@ -4,7 +4,7 @@ h2 {
     display: block;
     padding: 0.5rem 1rem;
     background-color: #000000;
-    color: #fff;
+    color: #e0feff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -14,7 +14,7 @@ h2 {
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
-    border: 1px solid #ccc;
+    border: 2px solid #e0feff;
     border-radius: 4px;
   
   }
@@ -23,7 +23,7 @@ h2 {
     display: block;
     padding: 0.5rem 1rem;
     background-color: #000000;
-    color: #fff;
+    color: #e0feff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
